details page view finalized + styles in css files added

--- a/src/components/DetailsPageView/DetailsPageView.module.css
+++ b/src/components/DetailsPageView/DetailsPageView.module.css
@@ -4,3 +4,13 @@
     justify-content: flex-start;
     align-items: center;
 }
+
+.header {
+
+}
+
+.button {
+    padding: 0 2.1em;
+    font-size: .875em;
+    height: 48px;
+}
