--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,10 +1,5 @@
-.App {
-    text-align: center;
-}
-
-.App-header {
-    background-color: lightgrey;
-    min-height: 20vh;
+.headerStyle {
+    min-height: 15vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,4 +7,6 @@
     font-size: calc(10px + 2vmin);
     color: white;
 }
-
+.container {
+    text-align: center;
+}
