--- a/src/components/DetailsPageView/DetailsPageView.module.css
+++ b/src/components/DetailsPageView/DetailsPageView.module.css
@@ -6,10 +6,13 @@
 }
 
 .header {
-
+    justify-content: space-between;
+    align-items: center;
+    margin: 2rem 1rem 0;
 }
 
 .button {
+    color: black;
     padding: 0 2.1em;
     font-size: .875em;
     height: 48px;
